hphp/hack/test/typecheck/const_attribute/usage/constructor_parameter_promotion.php.exp
File "constructor_parameter_promotion.php", line 8, characters 12-12:
Cannot assign to a __Const property (Typing[4196])
